main_section.css
body {
    margin: 0;
    overflow: hidden;
    font-family: 'Nunito Sans', sans-serif !important;
}

.video-bg-wrapper {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    z-index: -100;
}

.video-bg{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

@media (min-aspect-ratio: 16/9) {
    .video-bg {
      width: 100%;
      height: auto;
    }
}
  
@media (max-aspect-ratio: 16/9) {
    .video-bg {
      width: auto;
      height: 100%;
    }
}


.center-icon {
    height: 30px;
    width: 30px;
    border-radius: 50%;
    border-color: white;
    border-width: 2px;
    background-color: #363636;
    border-style: solid;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    top: -5px;
    left: -15px;
}


.active-icon {
    background-color: #d23e00 !important;
    height: 50px !important;
    width: 50px !important;
    left: -28px !important;
    font-size: 20px;
    top: -35px !important;
}

.absolute {
    position: absolute;
}

.relative {
    position: relative;
}

.bg-history {
    background-color: rgba(0, 0, 0, 0.3);
    border-left-color: white;
    border-left-width: 1px;
    border-style: none none none solid;
    margin-top: 2vh;
}

.book-bottom-left {
    width: 50%;
    height: 15px;
    border-top: 5px solid #fff;
    border-right: 5px solid #fff;
    border-color: white;
    border-radius: 0px 30px 0px 0px;
    border-style: solid solid none none ;
}
.book-bottom-right {
    width: 50%;
    height: 15px;
    border-top: 5px solid #fff;
    border-left: 5px solid #fff;
    border-color: white;
    border-radius: 30px 0px 0px 0px;
    border-style: solid none none solid ;
}

.progress-text {
    font-size: 14px ;
    margin-bottom: 1px;
    letter-spacing: 0.8px;
}

.bottom-text {
    font-size: 16px ;
    color: rgba(255, 255, 255, 0.8);
}

.step-details-container {
    bottom: 100%;
    width: 100%;
    max-height: 400px;
    padding-left: 0px;
    margin-bottom: 1.5rem;
}

.step-details {
    background-color: rgba(0, 0, 0, 0.3);   
    border-bottom-color: #ff3bdf;
    border-style: none none solid none;
    border-width: 1px;
    height: 100%;
}

.title-text {
    font-size: 18px;
    letter-spacing: 0.8px;
}

.margin-header {
    margin-top: 2%;
    padding-left: 1rem;
}

.margin-optins {
    padding-right: 1rem;
    margin-right: 1.5rem;
    word-wrap: break-word;
}

.padding-footer {
    padding-left: 3rem;
    padding-right: 3rem;
    padding-bottom: 0px;
}

.margin-progress {
    margin-bottom: 1rem;
}

.fa-lg {
    font-size: 12px;
}

.optins-text {
    font-size: 14px;
    margin-left: 3rem;
    margin-right: 3rem;
}

.margin-text-optins {
    margin-bottom: 1rem;
}
.padding-optins {
    padding-top: 1.5rem;
    padding-bottom: 0.5rem;
}
.optins-bar {
    max-width: 260px;
}

.padding-instructional {
    padding: 1.5rem;
}

.instructional-title {
    font-size: 20px;
}

.instructional-text {
    font-size: 16px;
}

.main-text-optins {
    font-size: 16px;

}

.close-pop-up {
    position: absolute;
    z-index: 100;
    font-size: 20px;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border-style: none;
    top: 13vh;
    left: 84vw;
    background-color: white;
    color: black;
    display: flex;
    justify-content: center;
    align-items: center;
}

.current-step-icon-details {
    padding-bottom: 4px; 
    font-size: 16px;
    
}

@media only screen and (max-width: 780px) {
    .progress-text {
        font-size: 10px ;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    .bottom-text {
        font-size: 12px ;
    }

    .step-details-container {
        width: 100%;
        max-height: 200px;
        padding-left: 0px;
        margin-bottom: 0.5rem;
    }

    .bg-history {
        margin-right: 0px;
        margin-top: 0vh
    }

    .fa-lg {
        font-size: 8px;
    }

    .none-display {
        display: none
    }

    .title-text {
        font-size: 12px;;
    }

    .margin-optins {
        margin-right: 0px;
        padding-right: 0px;
    }

    .padding-footer {
        padding-left: 1.5rem;
        padding-right: 2.5rem;
        padding-bottom: 0px;
    }

    
    .center-icon {
        height: 25px;
        width: 25px;
        border-radius: 50%;
        border-color: white;
        border-width: 2px;
        background-color: rgba(0, 0, 0, 1);
        border-style: solid;
        display: flex;
        justify-content: center;
        align-items: center;
        color: white;
        top: -0px !important;
        left: -15px;
    }

    .active-icon {
        background-color: #d23e00 !important;
        height: 30px !important;
        width: 30px !important;
        left: -15px !important;
        font-size: 12px;
        top: -20px !important;
    }

    .margin-text-optins {
        margin-bottom: 1rem;
    }

    .padding-optins {
        padding-top: 0.5rem;
        padding-bottom: 0.5rem;
    }
    
    .margin-header {
        margin-top: 0.5rem;
        padding-left: 0rem;
    }

    .padding-instructional {
        padding: 0.5rem;
        padding-bottom: 0px;
        margin-bottom: 0px;
    }

    .instructional-title {
        font-size: 12px;
    }
    
    .instructional-text {
        font-size: 10px;
    }

    .optins-text {
        font-size: 12px;
        margin-left: 1rem;
        margin-right: 1rem;
    }

    .optins-bar {
        max-width: 160px;
    }

    .main-text-optins {
        font-size: 10px;
    }

    .close-pop-up {
        top: 13vh;
        left: 84vw;
        font-size: 15px;
        width: 20px;
        height: 20px;
    }

    .margin-progress {
        margin-bottom: 0.5rem;
    }

    .current-step-icon-details {
        padding-bottom: 4px; 
        font-size: 12px;
    }
}

@media only screen and (max-width: 1000px) and (min-width: 781px){
    .progress-text {
        font-size: 12px;
    }

    .padding-instructional {
        padding: 0.5rem;
    }
}

.progress-default {
    height: 5px;
    width: 100%;
    padding-right: 4px;
    background-color: rgba(0, 0, 0, 0.3);
}

.progress-done {
    background-color: #fff;
}

.progress-process {
    background-color: #ff3bdf;
    width: 50% !important;
}

.progress-missing {
    background-color: rgba(0, 0, 0, 0.3);
    width: 50% !important;
}

.gradient-top {
    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.01));
    position: absolute;
    width: 100vw;
    height: 15vh;
}

.gradient-bottom {
    background-image: linear-gradient(rgba(0,0,0,0.01), #000);
}


.pop-up-video-bg-wrapper {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 100;
    backdrop-filter: blur(2px);
    display: none;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.4);
}

.pop-video {
    height: 70%;
    width: 70%;
    z-index: -100;
    position: absolute;
    border-color: white;
    border-width: 2px;
    border-style: solid;
    object-fit: fill;
}

